[package]
name = "robot_arm"
version = "0.1.0"
authors = ["Tomasz Cichocki <cichymail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.3"
ticker = "0.1"
byteorder = "1.3"
bus = "2.2"
rand = "0.8"